chore: fix integration tests
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>